[package]
name = "koto-ls"
version = "0.16.0"
edition = "2024"

authors = ["irh <ian.r.hobson@gmail.com>"]
description = "An LSP server for the Koto programming language"
homepage = "https://koto.dev"
keywords = ["scripting", "language", "koto", "lsp"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/koto-lang/koto-ls"

[dependencies]
anyhow = "1.0.82"
is_sorted = "0.1.1"
thiserror = "2"
tokio = { version = "1.37.0", features = ["full"] }
tower-lsp-server = "0.21.1"
tracing-subscriber = "0.3.18"
indexmap = "2.0.0"
pulldown-cmark = { version = "0.13.0", default-features = false }

[dependencies.koto_bytecode]
version = "0.16.0"
default-features = false
features = ["arc"]

[dependencies.koto_parser]
version = "0.16.0"
default-features = false
features = ["arc", "error_ast"]

[dependencies.koto_cli]
version = "0.16.0"
default-features = false
features = ["arc"]

[patch.crates-io]
# koto_bytecode = { git = "https://github.com/koto-lang/koto", rev = "8b94c43fc425805bfba884097c5a4c651ef97457" }
# koto_parser = { git = "https://github.com/koto-lang/koto", rev = "8b94c43fc425805bfba884097c5a4c651ef97457" }
koto_bytecode = { git = "https://github.com/rsaccon/koto", branch = "documentation" }
koto_parser = { git = "https://github.com/rsaccon/koto", branch = "documentation" }
koto_cli = { git = "https://github.com/rsaccon/koto", branch = "documentation" }

[profile.release]
codegen-units = 1
lto = true
